Overflow fix

--- a/src/App.sass
+++ b/src/App.sass
@@ -102,6 +102,7 @@ section.hero
 
 .seperator
     position: relative
+    overflow: hidden
     svg
         position: absolute
         z-index: 1
